Serve two.js and socket.io

--- a/pages/index.html
+++ b/pages/index.html
@@ -5,10 +5,10 @@
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
     </style>
-
+    <script src="two.js"></script>
   </head>
 
   <body>
-    <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
   </body>
 </html>
