--- a/pages/index.html
+++ b/pages/index.html
@@ -5,11 +5,11 @@
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
     </style>
-    <script src="two.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.4/p5.js"></script>
+    <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
+    <script src="pulsar.js"></script>    
   </head>
 
   <body>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="pulsar.js"></script>    
   </body>
 </html>
