--- a/pages/index.html
+++ b/pages/index.html
@@ -4,6 +4,8 @@
     <title>Pulsar</title>
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
+
+      body { overflow: hidden; }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.4/p5.js"></script>
     <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
